--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.26",
     "razorpay": "^2.9.6",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
