--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
     "razorpay": "^2.9.6",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
